Fixed drop cap, and a mistake about getting a pdf out of website on iOS.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -485,8 +485,8 @@ header ul li {
  .blog-post-content::first-letter {
   float: left;
   color: #242424;
-  font-size: 3.15rem;
-  line-height: 3rem;
+  font-size: 3.4rem;
+  line-height: 3.5rem;
   padding-top: 0px;
   padding-bottom: 0px;
   padding-right: 0.5rem;
